--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,8 +1,9 @@
 ################### DataSource Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/registration_02?createDatabaseIfNotExist=true
-jdbc.user=subhasis
-jdbc.pass=subhasis
+jdbc.url=jdbc:mysql://localhost:3306/customer?createDatabaseIfNotExist=true
+#jdbc.url=jdbc:mysql://localhost:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=subhasis
+jdbc.password=subhasis
 init-db=false
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
