--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.thymeleaf.cache=false
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/customer?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=subhasis
+jdbc.password=subhasis
+
+spring.datasource.url=jdbc:mysql://localhost:3306/fido_poc
+spring.datasource.username=subhasis
+spring.datasource.password=devWorks@2016
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.max-wait=10000
+# Maximum number of active connections that can be allocated from this pool at the same time.
+spring.datasource.max-active=50
+# Validate the connection before borrowing it from the pool.
+spring.datasource.test-on-borrow=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.datasource.validationQuery=SELECT 1
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
